// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view (empty) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="editAvatarBtn"
  >
    <Image
      height={120}
      source={
        Object {
          "uri": "uri",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 60,
          "height": 120,
          "justifyContent": "center",
          "marginTop": 20,
          "width": 120,
        }
      }
      width={120}
    />
  </View>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.name_placeholder",
            "title": "edit.profile.name_title",
            "value": "",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.username_placeholder",
            "title": "edit.profile.username_title",
            "value": "",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.phone_placeholder",
            "title": "edit.profile.phone_title",
            "value": "",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.email_placeholder",
            "title": "edit.profile.email_title",
            "value": "",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.name_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                edit.profile.name_placeholder
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.username_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                edit.profile.username_placeholder
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.phone_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                edit.profile.phone_placeholder
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.email_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                edit.profile.email_placeholder
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Test view (full) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="editAvatarBtn"
  >
    <Image
      height={120}
      source={
        Object {
          "uri": "uri",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 60,
          "height": 120,
          "justifyContent": "center",
          "marginTop": 20,
          "width": 120,
        }
      }
      width={120}
    />
  </View>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <RCTScrollView
      data={
        Array [
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.name_placeholder",
            "title": "edit.profile.name_title",
            "value": "name",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.username_placeholder",
            "title": "edit.profile.username_title",
            "value": "@username",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.phone_placeholder",
            "title": "edit.profile.phone_title",
            "value": "phoneNumber",
          },
          Object {
            "onClick": [Function],
            "placeholder": "edit.profile.email_placeholder",
            "title": "edit.profile.email_title",
            "value": "email",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.name_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                name
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.username_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                @username
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.phone_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                phoneNumber
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 1,
                  "borderColor": "#CCCCCC",
                  "marginTop": 30,
                  "paddingBottom": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                edit.profile.email_title
              </Text>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 6,
                  }
                }
              >
                email
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
